--- a/industries/manufacturing-cpg/manufacturing/index.html
+++ b/industries/manufacturing-cpg/manufacturing/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B600%3B700%3B800%3B900" rel="stylesheet" as="style" onload="this.rel='stylesheet'"/>
-    <title>Manufacturing Solutions - NTT DATA Demo Center</title>
+    <title>Manufacturing Processes - NTT DATA Demo Center</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -69,7 +69,7 @@
                 class="bg-gradient-to-b from-slate-900 to-slate-800 px-4 sm:px-8 md:px-16 lg:px-24 flex flex-1 justify-center py-8">
                 <!-- Title and Description with Blue Background -->
                 <div class="bg-gradient-to-b from-slate-900 to-slate-800 text-white py-6 sm:py-6 md:py-6">
-                    <h1 class="text-white text-4xl sm:text-5xl md:text-6xl page-title leading-tight tracking-tight">Manufacturing Solutions</h1>
+                    <h1 class="text-white text-4xl sm:text-5xl md:text-6xl page-title leading-tight tracking-tight">Manufacturing</h1>
                     <p class="text-xl text-slate-300 max-w-3xl">Drive digital transformation in manufacturing with our innovative solutions that enhance efficiency, quality, and productivity across business processes</p>
                 </div>
             </div>
@@ -80,6 +80,7 @@
 
                         <!-- Processes Grid -->
                         <section class="mb-12">
+                            <h2 class="text-2xl font-bold text-gray-900 mb-6">Covered processes</h2>
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                 <a href="../../../processes/manufacturing-cpg/manufacturing/smart-manufacturing.html" class="block">
                                     <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
