Update all files

--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
     <img src="/images/GlobalLogo_NTTDATA_FutureBlue_RGB.svg" alt="NTT DATA" class="w-40 md:w-48" />
   </a>
   <div class="text-slate-900 text-3xl @[480px]:text-4xl font-bold font-['Noto_Serif']">
-    Industry Demo Center
+    Supply Chain Demo Center
   </div>
 </div>
 
