--- a/industries/manufacturing-cpg/consumer-packaged-goods/index.html
+++ b/industries/manufacturing-cpg/consumer-packaged-goods/index.html
@@ -57,7 +57,7 @@
                             <li aria-current="page">
                                 <div class="flex items-center">
                                     <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
-                                    <span class="ml-1 text-sm font-medium text-slate-400">Manufacturing</span>
+                                    <span class="ml-1 text-sm font-medium text-slate-400">Consumer Packaged Goods</span>
                                 </div>
                             </li>
                         </ol>
@@ -82,7 +82,7 @@
                         <section class="mb-12">
                             <h2 class="text-2xl font-bold text-gray-900 mb-6">Covered processes</h2>
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                                <a href="../../../processes/manufacturing-cpg/manufacturing/smart-order-management.html" class="block">
+                                <a href="../../../processes/manufacturing-cpg/cpg/smart-order-management.html" class="block">
                                     <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
                                         <div class="flex items-center mb-4">
                                             <span class="material-symbols-outlined text-[#1672ce] text-3xl mr-3">local_shipping</span>
