--- a/processes/manufacturing-cpg/cpg/smart-order-management.html
+++ b/processes/manufacturing-cpg/cpg/smart-order-management.html
@@ -57,7 +57,7 @@
                             <li>
                                 <div class="flex items-center">
                                     <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
-                                    <a href="../../../industries/manufacturing-cpg/manufacturing/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Manufacturing</a>
+                                    <a href="../../../industries/manufacturing-cpg/consumer-packaged-goods/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Consumer Packaged Goods</a>
                                 </div>
                             </li>
                             <li aria-current="page">
@@ -139,13 +139,13 @@
                             <h2 class="text-slate-900 text-3xl sm:text-4xl section-title leading-tight tracking-tight mb-8">Success Stories</h2>
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                                 <!-- Success Story Card 1 -->
-                                <a href="../../../success-stories/automotive-manufacturing-success.html" class="block">
+                                <a href="../../../success-stories/cosmetics-brand-success.html" class="block">
                                     <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
                                         <div class="h-48 rounded-lg overflow-hidden">
                                             <img src="../../../images/processes/cpg/success_3.jpg" alt="Shoe shop" class="w-full h-full object-cover"/>
                                         </div>
                                         <div>
-                                            <h3 class="text-slate-900 text-lg font-semibold leading-tight">Global Shoe Brand</h3>
+                                            <h3 class="text-slate-900 text-lg font-semibold leading-tight">Cosmetics Brand</h3>
                                             <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Implemented smart order management processes resulting in 30% efficiency improvement and 25% reduction in downtime.</p>
                                         </div>
                                     </div>
@@ -168,18 +168,8 @@
                         <section class="mb-12">
                             <h2 class="text-slate-900 text-3xl sm:text-4xl section-title leading-tight tracking-tight mb-8">Use Cases</h2>
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                                <!-- Use Case Card 1 -->
-                                <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
-                                    <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
-                                        <span class="material-symbols-outlined">settings_suggest</span>
-                                    </div>
-                                    <div>
-                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Predictive Maintenance</h3>
-                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">AI-driven maintenance scheduling to prevent equipment failures and minimize downtime.</p>
-                                    </div>
-                                </div>
 
-                                <!-- Use Case Card 2 -->
+                                <!-- Use Case Card 1 -->
                                 <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
                                     <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
                                         <span class="material-symbols-outlined">inventory_2</span>
@@ -187,6 +177,17 @@
                                     <div>
                                         <h3 class="text-slate-900 text-lg font-semibold leading-tight">Inventory Optimization</h3>
                                         <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Real-time inventory tracking and automated reordering based on demand prediction.</p>
+                                    </div>
+                                </div>
+
+                                <!-- Use Case Card 2 -->
+                                <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
+                                    <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
+                                        <span class="material-symbols-outlined">settings_suggest</span>
+                                    </div>
+                                    <div>
+                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Predictive Maintenance</h3>
+                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">AI-driven maintenance scheduling to prevent equipment failures and minimize downtime.</p>
                                     </div>
                                 </div>
 
