--- a/success-stories/cosmetics-brand-success copy.html
+++ b/success-stories/cosmetics-brand-success copy.html
@@ -57,19 +57,13 @@
                             <li>
                                 <div class="flex items-center">
                                     <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
-                                    <a href="../../../industries/manufacturing-cpg/manufacturing/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Manufacturing</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="flex items-center">
-                                    <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
-                                    <a href="../../../processes/manufacturing-cpg/manufacturing/smart-manufacturing.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Smart Manufacturing Process</a>
+                                    <a href="../../../industries/manufacturing-cpg/consumer-packaged-goods/index.html" class="ml-1 text-sm font-medium text-slate-200 hover:text-white transition-colors">Consumer Packages Goods</a>
                                 </div>
                             </li>
                             <li aria-current="page">
                                 <div class="flex items-center">
                                     <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
-                                    <span class="ml-1 text-sm font-medium text-slate-400">Global Automotive Manufacturer Transformation</span>
+                                    <span class="ml-1 text-sm font-medium text-slate-400">Smart Manufacturing Process</span>
                                 </div>
                             </li>
                         </ol>
@@ -78,11 +72,11 @@
             </div>
             <!-- Hero Section -->
             <div class="hero-section">
-                <img src="../images/processes/manufacturing/automotive-success.jpg" alt="Automotive manufacturing plant"/>
+                <img src="../images/processes/cpg/success_3.jpg" alt="Automotive manufacturing plant"/>
                 <div class="content">
                     <div class="max-w-6xl mx-auto px-6 sm:px-10 w-full">
                         <div class="max-w-3xl">
-                            <h1 class="text-4xl sm:text-5xl md:text-6xl page-title text-white leading-tight tracking-tight mb-6">Global Automotive Manufacturer Transformation</h1>
+                            <h1 class="text-4xl sm:text-5xl md:text-6xl page-title text-white leading-tight tracking-tight mb-6">Cosmetics Brand</h1>
                             <p class="text-xl text-slate-200">How a leading automotive manufacturer achieved unprecedented efficiency improvements through smart manufacturing implementation.</p>
                         </div>
                     </div>
