Nueva sección de menú para Processes

--- a/processes/manufacturing-cpg/cpg/smart-order-management.html
+++ b/processes/manufacturing-cpg/cpg/smart-order-management.html
@@ -128,7 +128,7 @@
                                     <div class="w-40 h-40 rounded-full bg-white flex items-center justify-center mb-4 relative border-2 border-sky-200 p-2 shadow-lg">
                                         <img src="../../../images/processes/cpg/stock_allocation.jpg" alt="Automated manufacturing process" class="w-full h-full object-cover rounded-full"/>
                                     </div>
-                                    <h3 class="text-slate-900 font-semibold mb-2">Stock Allocation</h3>
+                                    <h3 class="text-slate-900 font-semibold mb-2">Delivery Released & Transit</h3>
                                     <p class="text-slate-600 text-sm">The bridge between having the product and getting it to the right customer, at the right time, from the right place.</p>
                                 </div>
                             </div>
