--- a/header.html
+++ b/header.html
@@ -13,6 +13,7 @@
 <nav class="hidden md:flex items-center justify-center flex-1 px-6">
   <div class="flex items-center gap-8">
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/industries">Industries</a>
+<a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/processes/">Processes</a>
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/solutions">Solutions</a>
     <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/events.html">Events</a>
 <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/livinglab.html">Living Lab</a>
