--- a/industries/manufacturing-cpg/manufacturing/index.html
+++ b/industries/manufacturing-cpg/manufacturing/index.html
@@ -81,17 +81,27 @@
                         <!-- Processes Grid -->
                         <section class="mb-12">
                             <h2 class="text-2xl font-bold text-gray-900 mb-6">Covered processes</h2>
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                                <a href="../../../processes/manufacturing-cpg/manufacturing/smart-manufacturing.html" class="block">
-                                    <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
-                                        <div class="flex items-center mb-4">
-                                            <span class="material-symbols-outlined text-[#1672ce] text-3xl mr-3">precision_manufacturing</span>
-                                            <h3 class="text-xl font-semibold text-gray-900">Smart Manufacturing</h3>
-                                        </div>
-                                        <p class="text-gray-600">End-to-end process optimization through IoT integration and data-driven insights.</p>
-                                    </div>
-                                </a>
-                            </div>
+                                                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                                                             <a href="../../../processes/manufacturing-cpg/manufacturing/smart-manufacturing.html" class="block">
+                                                                 <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
+                                                                     <div class="flex items-center mb-4">
+                                                                         <span class="material-symbols-outlined text-[#1672ce] text-3xl mr-3">precision_manufacturing</span>
+                                                                         <h3 class="text-xl font-semibold text-gray-900">Smart Manufacturing</h3>
+                                                                     </div>
+                                                                     <p class="text-gray-600">End-to-end process optimization through IoT integration and data-driven insights.</p>
+                                                                 </div>
+                                                             </a>
+                                                             <a href="../../../processes/manufacturing-cpg/manufacturing/outbound-transportation.html" class="block">
+                                                                 <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
+                                                                     <div class="flex items-center mb-4">
+                                                                         <span class="material-symbols-outlined text-[#1672ce] text-3xl mr-3">local_shipping</span>
+                                                                         <h3 class="text-xl font-semibold text-gray-900">Outbound Transportation</h3>
+                                                                     </div>
+                                                                     <p class="text-gray-600">Efficient management of product delivery and logistics operations.</p>
+                                                                 </div>
+                                                             </a>
+                                                         </div>
+                            
                         </section>
 
                         <!-- Features Section -->
