--- a/processes/manufacturing-cpg/manufacturing/outbound-transportation.html
+++ b/processes/manufacturing-cpg/manufacturing/outbound-transportation.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B600%3B700%3B800%3B900" rel="stylesheet" as="style" onload="this.rel='stylesheet'"/>
-    <title>Smart Manufacturing Process - NTT DATA Demo Center</title>
+    <title>Outbound Transportation Process - NTT DATA Demo Center</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -63,7 +63,7 @@
                             <li aria-current="page">
                                 <div class="flex items-center">
                                     <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
-                                    <span class="ml-1 text-sm font-medium text-slate-400">Smart Manufacturing</span>
+                                    <span class="ml-1 text-sm font-medium text-slate-400">Outbound Transportation</span>
                                 </div>
                             </li>
                         </ol>
@@ -74,11 +74,9 @@
                 class="bg-gradient-to-b from-slate-900 to-slate-800 px-4 sm:px-8 md:px-16 lg:px-24 flex flex-1 justify-center py-8">
                 <!-- Title and Description with Blue Background -->
                 <div class="bg-gradient-to-b from-slate-900 to-slate-800 text-white py-6 sm:py-6 md:py-6">
-                    <h1 class="text-white text-4xl sm:text-5xl md:text-6xl page-title leading-tight tracking-tight">Smart
-                        Manufacturing</h1>
-                    <p class="text-xl text-slate-300 max-w-3xl">Optimize manufacturing operations through digitalization and
-                        automation, integrating IoT devices, AI-driven analytics, and real-time monitoring for improved efficiency
-                        and quality.</p>
+                    <h1 class="text-white text-4xl sm:text-5xl md:text-6xl page-title leading-tight tracking-tight">Outbound
+                        Transportation</h1>
+                    <p class="text-xl text-slate-300 max-w-3xl">Streamline product delivery and logistics operations through integrated transportation management, real-time tracking, and optimized route planning for improved efficiency and customer satisfaction.</p>
                 </div>
             </div>
             <div class="layout-container flex h-full grow flex-col">
@@ -90,49 +88,49 @@
                                 <!-- Node 1 -->
                                 <div class="flex flex-col items-center text-center">
                                     <div class="w-40 h-40 rounded-full bg-white flex items-center justify-center mb-4 relative border-2 border-sky-200 p-2 shadow-lg">
-                                        <img src="../../../images/processes/manufacturing/data-collection.jpg" alt="IoT sensors collecting data" class="w-full h-full object-cover rounded-full"/>
+                                        <img src="../../../images/processes/manufacturing/data-collection.jpg" alt="Order processing" class="w-full h-full object-cover rounded-full"/>
                                         <!-- Connecting Line -->
                                         <div class="absolute h-0.5 bg-sky-200 w-full right-0 top-1/2 -translate-y-1/2 translate-x-full hidden lg:block"></div>
                                         <!-- Mobile Arrow -->
                                         <span class="material-symbols-outlined text-sky-200 text-4xl absolute -bottom-8 rotate-90 lg:hidden">arrow_forward</span>
                                     </div>
-                                    <h3 class="text-slate-900 font-semibold mb-2">Data Collection</h3>
-                                    <p class="text-slate-600 text-sm">IoT sensors and devices collect real-time production data</p>
+                                    <h3 class="text-slate-900 font-semibold mb-2">Order Processing</h3>
+                                    <p class="text-slate-600 text-sm">Efficient handling of customer orders and inventory allocation</p>
                                 </div>
 
                                 <!-- Node 2 -->
                                 <div class="flex flex-col items-center text-center">
                                     <div class="w-40 h-40 rounded-full bg-white flex items-center justify-center mb-4 relative border-2 border-sky-200 p-2 shadow-lg">
-                                        <img src="../../../images/processes/manufacturing/monitoring.jpg" alt="Real-time monitoring dashboard" class="w-full h-full object-cover rounded-full"/>
+                                        <img src="../../../images/processes/manufacturing/monitoring.jpg" alt="Warehouse management" class="w-full h-full object-cover rounded-full"/>
                                         <!-- Connecting Line -->
                                         <div class="absolute h-0.5 bg-sky-200 w-full right-0 top-1/2 -translate-y-1/2 translate-x-full hidden lg:block"></div>
                                         <!-- Mobile Arrow -->
                                         <span class="material-symbols-outlined text-sky-200 text-4xl absolute -bottom-8 rotate-90 lg:hidden">arrow_forward</span>
                                     </div>
-                                    <h3 class="text-slate-900 font-semibold mb-2">Real-time Monitoring</h3>
-                                    <p class="text-slate-600 text-sm">Continuous monitoring of production metrics and KPIs</p>
+                                    <h3 class="text-slate-900 font-semibold mb-2">Warehouse Management</h3>
+                                    <p class="text-slate-600 text-sm">Optimized storage and picking operations for faster fulfillment</p>
                                 </div>
 
                                 <!-- Node 3 -->
                                 <div class="flex flex-col items-center text-center">
                                     <div class="w-40 h-40 rounded-full bg-white flex items-center justify-center mb-4 relative border-2 border-sky-200 p-2 shadow-lg">
-                                        <img src="../../../images/processes/manufacturing/analytics.jpg" alt="AI analytics visualization" class="w-full h-full object-cover rounded-full"/>
+                                        <img src="../../../images/processes/manufacturing/analytics.jpg" alt="Route planning" class="w-full h-full object-cover rounded-full"/>
                                         <!-- Connecting Line -->
                                         <div class="absolute h-0.5 bg-sky-200 w-full right-0 top-1/2 -translate-y-1/2 translate-x-full hidden lg:block"></div>
                                         <!-- Mobile Arrow -->
                                         <span class="material-symbols-outlined text-sky-200 text-4xl absolute -bottom-8 rotate-90 lg:hidden">arrow_forward</span>
                                     </div>
-                                    <h3 class="text-slate-900 font-semibold mb-2">Analysis & Insights</h3>
-                                    <p class="text-slate-600 text-sm">AI/ML powered analysis for predictive insights</p>
+                                    <h3 class="text-slate-900 font-semibold mb-2">Route Planning</h3>
+                                    <p class="text-slate-600 text-sm">Dynamic routing for cost-effective and timely deliveries</p>
                                 </div>
 
                                 <!-- Node 4 -->
                                 <div class="flex flex-col items-center text-center">
                                     <div class="w-40 h-40 rounded-full bg-white flex items-center justify-center mb-4 relative border-2 border-sky-200 p-2 shadow-lg">
-                                        <img src="../../../images/processes/manufacturing/optimization.jpg" alt="Automated manufacturing process" class="w-full h-full object-cover rounded-full"/>
+                                        <img src="../../../images/processes/manufacturing/optimization.jpg" alt="Delivery tracking" class="w-full h-full object-cover rounded-full"/>
                                     </div>
-                                    <h3 class="text-slate-900 font-semibold mb-2">Process Optimization</h3>
-                                    <p class="text-slate-600 text-sm">Automated adjustments and optimizations</p>
+                                    <h3 class="text-slate-900 font-semibold mb-2">Delivery Tracking</h3>
+                                    <p class="text-slate-600 text-sm">Real-time shipment tracking and proof of delivery</p>
                                 </div>
                             </div>
                         </section>
@@ -149,7 +147,7 @@
                                         </div>
                                         <div>
                                             <h3 class="text-slate-900 text-lg font-semibold leading-tight">Global Automotive Manufacturer</h3>
-                                            <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Implemented smart manufacturing process resulting in 30% efficiency improvement and 25% reduction in downtime.</p>
+                                            <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Implemented optimized outbound transportation resulting in 25% reduction in delivery times and 20% cost savings.</p>
                                         </div>
                                     </div>
                                 </a>
@@ -160,8 +158,8 @@
                                         <img src="../../../images/processes/manufacturing/electronics-success.jpg" alt="Electronics manufacturing facility" class="w-full h-full object-cover"/>
                                     </div>
                                     <div>
-                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Electronics Manufacturer</h3>
-                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Achieved 40% defect reduction and 20% increase in production throughput through IoT integration.</p>
+                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Consumer Electronics Company</h3>
+                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Achieved 30% improvement in on-time delivery performance through advanced transportation management.</p>
                                     </div>
                                 </div>
                             </div>
@@ -174,33 +172,33 @@
                                 <!-- Use Case Card 1 -->
                                 <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
                                     <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
-                                        <span class="material-symbols-outlined">settings_suggest</span>
+                                        <span class="material-symbols-outlined">local_shipping</span>
                                     </div>
                                     <div>
-                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Predictive Maintenance</h3>
-                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">AI-driven maintenance scheduling to prevent equipment failures and minimize downtime.</p>
+                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Fleet Management</h3>
+                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Optimized vehicle utilization and maintenance scheduling for reduced costs.</p>
                                     </div>
                                 </div>
 
                                 <!-- Use Case Card 2 -->
                                 <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
                                     <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
-                                        <span class="material-symbols-outlined">inventory_2</span>
+                                        <span class="material-symbols-outlined">location_on</span>
                                     </div>
                                     <div>
-                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Inventory Optimization</h3>
-                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Real-time inventory tracking and automated reordering based on demand prediction.</p>
+                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Real-time Tracking</h3>
+                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">GPS-enabled tracking for enhanced visibility and timely interventions.</p>
                                     </div>
                                 </div>
 
                                 <!-- Use Case Card 3 -->
                                 <div class="flex flex-col gap-4 rounded-xl border border-slate-200 bg-white p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
                                     <div class="text-[#1672ce] h-10 w-10 flex items-center justify-center bg-sky-100 rounded-full">
-                                        <span class="material-symbols-outlined">verified</span>
+                                        <span class="material-symbols-outlined">inventory_2</span>
                                     </div>
                                     <div>
-                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Quality Control</h3>
-                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Computer vision and AI for automated quality inspection and defect detection.</p>
+                                        <h3 class="text-slate-900 text-lg font-semibold leading-tight">Inventory Management</h3>
+                                        <p class="text-slate-600 text-sm font-normal leading-normal mt-2">Integrated inventory control for accurate order fulfillment and reduced stockouts.</p>
                                     </div>
                                 </div>
                             </div>
